TLDR | Word Choice Tweaks | Minor tweaks to work choice, fixed some formatting errors

--- a/index.html
+++ b/index.html
@@ -4317,11 +4317,11 @@
           <span class="biggerfont">
             I am a self-taught full-stack GIS Developer</span
           >
-          meaning I work with analyzing and communicating spatial datasets -
-          often with a focus on city-design, climate change, and the growing
-          socio-economic divide. The goal is help organizations communicate. And
+          which means I inventory, analyze, and visualize spatial data - with
+          topics often focusing on city-design, climate change, and the growing
+          socio-economic divide. The goal is communicate using technology. And
           doing so by translating complex research narratives into
-          easy-to-digest maps and apps in order to reach wide audiences.
+          easy-to-digest web-maps and apps in order to engage wider audiences.
           <br /><br />
           <span class="biggerfont">
             I am the founder of TucsonPathways.org</span
@@ -4329,9 +4329,10 @@
           - a bicycle advocacy organization, centered on data-analytics of city
           infrastructure. The Pathways web-app calculates and visualizes
           alternative bike-commutes optimized for safer, quieter, more scenic
-          rides. The goal is to promote commuting for potential-riders who feel
-          intimidated to ride on traditional bike-lanes alongside high-stress
-          vehicle traffic. <br /><br />
+          rides. The goal is (1) raise literacy of daily CO2 use, and (2)
+          promote bike-commuting for potential-riders who feel intimidated to
+          ride on traditional bike-lanes alongside high-stress vehicle traffic.
+          <br /><br />
           <span class="biggerfont"> I graduated with distinction</span>
           in Applied Mathematics & Environmental Hydrology from the University
           of Arizona in the Spring of 2013, working odd-jobs and internships
@@ -4340,9 +4341,9 @@
           <span class="biggerfont">I am a self-educated </span>in numerous
           programming languages and technical softwares - ArcGIS, QGIS, Spatial
           Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS, Javascript,
-          Node, git version control, VSCode, Vue.js, Mapbox-GL.js,
-          Mapbox-Studio, Leaflet, Drone Mapping, Graphhopper, Netlify, Turf.js,
-          Microsoft Office Suite, some Python, some Firebase, some D3.js, along
+          Node, git version control, Vue.js, Mapbox-GL.js, Mapbox-Studio,
+          Leaflet.js, Drone Mapping, Graphhopper, Netlify, Turf.js, Microsoft
+          Office Suite, Ubuntu OS, some Python, some Firebase, some D3.js, along
           with several others smaller supplementary programs. <br /><br />
           <span class="biggerfont">I am a published technical writer </span>with
           the United States Geological Survey for my work in using GIS methods
@@ -4352,8 +4353,11 @@
           Program. <br /><br />
           <span class="biggerfont">Through years past </span>I've worked as a
           bike mechanic, warehouse laborer, bartender, hydrological technican,
-          waste collector, research analyst, community-farm laborer,
-          freelance movie critic, and currently volunteer on weekends as a medical scribe for the Covid-19 vaccine effort. In spare time, I love bike-touring, competitive ultimate frisbee, and volunteering as a youth rock-climbing instructor. <br /><br />
+          waste collector, research analyst, community-farm laborer, freelance
+          movie critic, and currently volunteer on weekends as an observational
+          assistant for the Covid-19 vaccine effort. In my spare time, I love
+          bicycle-touring, playing competitive ultimate frisbee, and
+          volunteering as a youth rock-climbing instructor. <br /><br />
           <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
                       <br><br> -->
           <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
@@ -4386,10 +4390,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  GIS ANALYSIS<br /><br />
+                  GIS WEB-MAP<br /><br />
                 </div>
                 <div class="project-name">
-                  Global Erosion Risk Web-Map<br /><br />(WRI Internship)
+                  Mitigating Global Sedimentation Transport Via Forest Conservation & Restoration<br /><br />(WRI Internship)
                 </div>
               </div>
             </div>
@@ -4418,11 +4422,10 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  GIS ANALYSIS<br /><br />
+                  GIS WEB-MAP<br /><br />
                 </div>
                 <div class="project-name">
-                  Mapping Tucson's Road Network, Optimized for Bicycle-Safety<br /><br />(Personal
-                  Project)
+                  Mapping Tucson's Low-Stress Bicycle Network, Optimized for Safety<br /><br />(Creator and Sole Founder)
                 </div>
               </div>
             </div>
@@ -4468,8 +4471,8 @@
                   TECHNICAL WRITING<br /><br />
                 </div>
                 <div class="project-name">
-                  methodology of suitability index - classify regions at risk of
-                  soil-erosion/land instability<br /><br />(WRI Internship)
+                  Methodology of Suitability Index - Classify Regions at Risk Of
+                  Soil-Erosion/Land Instability<br /><br />(WRI Internship)
                 </div>
               </div>
             </div>
@@ -4487,8 +4490,8 @@
                   CARTOGRAPHIC DESIGN<br /><br />
                 </div>
                 <div class="project-name">
-                  Data visualization of city-space dedicated to people versus
-                  cars<br /><br />(Personal Project)
+                  Data Visualization of City-Space Dedicated to People Versus
+                  Cars<br /><br />(Personal Design Project)
                 </div>
               </div>
             </div>
@@ -4506,8 +4509,8 @@
                   CARTOGRAPHIC DESIGN<br /><br />
                 </div>
                 <div class="project-name">
-                  Data visualization map-slider between city's high-traffic
-                  roads & low-traffic roads<br /><br />(Personal Project)
+                  Data Visualization Map-Slider Between City's High-Traffic
+                  Roads & Low-Traffic Roads<br /><br />(Personal Design Project)
                 </div>
               </div>
             </div>
@@ -4522,8 +4525,8 @@
                   CARTOGRAPHIC DESIGN<br /><br />
                 </div>
                 <div class="project-name">
-                  Data visualization of Tucson at night, simulating the glow of
-                  street-lights & house-lights<br /><br />(Personal Project)
+                  Data Visualization of Tucson at Night, Simulating the Glow of
+                  Street-Lights & House-Lights<br /><br />(Personal Design Project)
                 </div>
               </div>
             </div>
@@ -4541,8 +4544,8 @@
                   CARTOGRAPHIC DESIGN<br /><br />
                 </div>
                 <div class="project-name">
-                  Data visualization of the best bicycle-touring routes of the
-                  four corner states<br /><br />(Personal Project)
+                  Data Visualization of the Best Bicycle-Touring Routes of the
+                  Four Corner States<br /><br />(Personal Design Project)
                 </div>
               </div>
             </div>
