TLDR | Added Kagi and Tweaks | Added Kagi Software Developer work, and tweaks to word-choice throughout.

--- a/index.html
+++ b/index.html
@@ -4317,21 +4317,21 @@
           <span class="biggerfont">
             I am a self-taught full-stack GIS Developer</span
           >
-          meaning I work with analyzing and communicating spatial datasets -
-          often with a focus on city-design, climate change, and the growing
-          socio-economic divide. The goal is help organizations communicate. And
-          doing so by translating complex research narratives into
-          easy-to-digest maps and apps in order to reach wide audiences.
+          meaning I analyze and visualize spatial datasets - often with a focus
+          on city-design, climate change, and the growing socio-economic divide.
+          The goal is to help organizations translate complex research topics
+          into easy-to-digest visual narratives in order to reach wide
+          audiences.
           <br /><br />
           <span class="biggerfont">
             I am the founder of TucsonPathways.org</span
           >
           - a bicycle advocacy organization, centered on data-analytics of city
-          infrastructure. The Pathways web-app calculates and visualizes
-          alternative bike-commutes optimized for safer, quieter, more scenic
-          rides. The goal is to promote commuting for potential-riders who feel
-          intimidated to ride on traditional bike-lanes alongside high-stress
-          vehicle traffic. <br /><br />
+          infrastructure. The Pathways web-app determines alternative
+          bike-commutes optimized for safer, quieter, more scenic rides. The
+          goal is to promote commuting for potential-riders who feel intimidated
+          to ride on traditional bike-lanes alongside high-stress vehicle
+          traffic. <br /><br />
           <span class="biggerfont"> I graduated with distinction</span>
           in Applied Mathematics & Environmental Hydrology from the University
           of Arizona in the Spring of 2013, working odd-jobs and internships
@@ -4350,10 +4350,19 @@
           acknowledged in a publication by the World Resources Institute for my
           GIS contributions to the Forest Conservation Natural Infrastructure
           Program. <br /><br />
+          <span class="biggerfont">Most Recently </span>I work as a software
+          developer for Kagi.com - a privacy focused search-engine startup. I
+          spearhead the our map platform, with day-to-day work focuses on UX/UI,
+          geospatial data integration, and feature design. In my spare time, I
+          am working to scale TucsonPathways across national coverage.
+
+          <br /><br />
           <span class="biggerfont">Through years past </span>I've worked as a
           bike mechanic, warehouse laborer, bartender, hydrological technican,
-          waste collector, research analyst, community-farm laborer,
-          freelance movie critic, and currently volunteer on weekends as a medical scribe for the Covid-19 vaccine effort. In spare time, I love bike-touring, competitive ultimate frisbee, and volunteering as a youth rock-climbing instructor. <br /><br />
+          research analyst, community-farm worker, freelance movie critic, and
+          volunteer through the Covid-19 vaccine effort. In spare time, I love
+          bike-touring, playing competitive ultimate frisbee, and volunteering
+          as a youth rock-climbing instructor. <br /><br />
           <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
                       <br><br> -->
           <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
