Portofil Map | Style-URL | ?optimize=true
Trying to optimize the loadtime of the portfolio map. Trimmed quite a bit of fat  in Mapbox Studio (obviously that wont be reflected in the git commit), but also added optimize=true flag to the style url -- discussed here https://docs.mapbox.com/help/glossary/style-optimized-vector-tiles/

--- a/index.html
+++ b/index.html
@@ -4098,7 +4098,7 @@
         "pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ";
       var map = new mapboxgl.Map({
         container: "map", // container id
-        style: "mapbox://styles/dylanc/ckl1fryhy0f3l17qk51mua1yt", // style URL
+        style: "mapbox://styles/dylanc/ckl1fryhy0f3l17qk51mua1yt?optimize=true", // style URL
         center: [-110.709, 32.008],
         zoom: 8.4,
         pitch: 20,
