Feat(about): Tweak wordchoice

--- a/index.html
+++ b/index.html
@@ -336,36 +336,26 @@
           <br /><br />
           <span class="biggerfont"> I graduated with distinction </span>
           in Applied Mathematics & Environmental Hydrology from the University
-          of Arizona in the Spring of 2013, working odd-jobs and internships
-          throughout to pay my way through college.
+          of Arizona in the Spring of 2013, self-paying my way through college.
           <br /><br />
-          <span class="biggerfont">I am a self-educated </span>in numerous
-          languages, libraries, softwares, and dev-principles - Mapbox-Studio,
-          QGIS, ArcGIS, Spatial Analysis Toolsets, OpenStreetMap, Command-line
-          Toolsets, HTML, CSS, JS, Vue Framework, State-management, OOP vs.
-          Functional Programming, Backend-Dev (Node, Express, MongoDB) Git
-          Version Control, NPM, Mapbox-gl, Mapkit, Turf, Leaflet, Graphhopper,
-          Netlify/Heroku Deployment, Microsoft Office Suite, Ubuntu OS, some
-          Python, some Firebase, some D3.js, along with several others smaller
-          supplementary programs. <br /><br />
+          <span class="biggerfont">I am self-taught </span>in numerous
+          languages, libraries, softwares, and dev-principles - Javascript/Node/ES6, HTML, CSS, Mapbox-gl, Mapkit (Apple Maps), Turf, Leaflet, Graphhopper, some D3, some Firebase, some Python, Mapbox-Studio, Tippecanoe, QGIS, ArcGIS, Spatial Analysis Toolsets, OpenStreetMap, Git Version Control, NPM, state-management, module-design patterns, custom-element design (ie js web-components), OOP, Backend-Dev (Express, MongoDB), Netlify/Heroku Deployment, Microsoft Office Suite, Linux environments (Ubuntu 22.04), along with several others smaller supplementary programs. <br /><br />
           <span class="biggerfont">I am a published technical writer </span>with
           the United States Geological Survey for my work in using GIS methods
           to improve estimates of agricultural water-use. I have been formally
           acknowledged in a publication by the World Resources Institute for my
           GIS contributions to the Forest Conservation Natural Infrastructure
           Program. <br /><br />
-          <span class="biggerfont">Most recently </span>I work as a software
-          developer for Kagi.com - a privacy focused search-engine startup.
+          <span class="biggerfont">I currently work as a software
+          developer </span>for Kagi.com - a privacy focused search-engine startup.
           Spearheading our map platform, I focuses on UX/UI, geospatial data
           integration, and feature design. In my spare time, I am working to
           scale TucsonPathways across national coverage.
           <br /><br />
-          <span class="biggerfont">Through years past </span>I've worked as a
-          bike mechanic, warehouse laborer, bartender, hydrological technican,
-          research analyst, community-farm worker, movie critic, and volunteer
+          <span class="biggerfont">In past years, I've been a </span>bike mechanic, warehouse laborer, bartender, hydrological technican,
+          research analyst, community-farm worker, movie critic, youth rock-climbing coach, and volunteer
           through the Covid-19 vaccine effort. In spare time, I love
-          bike-touring, playing competitive ultimate frisbee, and volunteering
-          as a youth rock-climbing instructor. <br /><br />
+          bike-touring, playing competitive ultimate frisbee, and cooking veggie sautes. <br /><br />
           <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
   <br><br> -->
           <!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
