Tweak(words): Use Programmer in contact card

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <h1>DYLAN SCOTT</h1>
           </div>
           <div class="wow fadeInRight" data-wow-delay="1s">
-            <h4>Activist / Urbanist / Environmentalist / Analyst</h4>
+            <h4>Activist / Urbanist / Environmentalist / Programmer </h4>
           </div>
           <div class="wow fadeInUp" data-wow-delay="1.2s">
             <hr class="medium" />
@@ -352,7 +352,7 @@
           integration, and feature design. In my spare time, I am working to
           scale TucsonPathways across national coverage.
           <br /><br />
-          <span class="biggerfont">In past years, I've been a </span>bike mechanic, warehouse laborer, bartender, hydrological technican,
+          <span class="biggerfont">In past years, I've worked as a </span>bike mechanic, warehouse laborer, bartender, hydrological technican,
           research analyst, community-farm worker, movie critic, youth rock-climbing coach, and volunteer
           through the Covid-19 vaccine effort. In spare time, I love
           bike-touring, playing competitive ultimate frisbee, and cooking veggie sautes. <br /><br />
