Feat(grad-date): Remove year

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <br /><br />
         <span class="biggerfont"> I graduated with distinction </span>
         in Applied Mathematics & Environmental Hydrology from the University
-        of Arizona in the Spring of 2013, self-paying my way through college.
+        of Arizona, self-paying my way through college.
         <br /><br />
         <span class="biggerfont">I am self-taught </span>in numerous
         languages, libraries, softwares, and dev-principles - Javascript/Node/ES6, HTML, CSS, Mapbox-gl, Mapkit (Apple
